# capbac

./: capbac.proto  notes.md  spec.md
.github/workflows/: rust.yml  tests.yml
clojure/: .dir-locals.el  deps.edn
clojure/src/capbac/: core.clj
clojure/test/capbac/: core_test.clj
java/: .gitignore  pom.xml
java/cli/: pom.xml
java/cli/src/main/java/io/xapix/capbac/cli/: CapBACCli.java
java/lib/: pom.xml
java/lib/src/main/java/io/xapix/capbac/: CapBAC.java  CapBACCertificate.java  CapBACHolder.java  CapBACInvocation.java  CapBACKeypair.java  CapBACKeypairs.java  CapBACProto.java  CapBACPubs.java  CapBACResolver.java  CapBACTrustChecker.java  CapBACValidator.java
java/lib/src/main/java/io/xapix/capbac/keypairs/: StaticMapKeypairs.java
java/lib/src/main/java/io/xapix/capbac/pubs/: StaticMapPubs.java
java/lib/src/main/java/io/xapix/capbac/resolvers/: StaticMapResolver.java
java/lib/src/main/java/io/xapix/capbac/trust/: PatternChecker.java
java/lib/src/main/proto/: capbac.proto
java/src/main/java/io/xapix/capbac/: CapBAC.java  CapBACCaveat.java  CapBACCaveatBuilder.java  CapBACCertificate.java  CapBACHolder.java  CapBACInvocation.java  CapBACInvocationBuilder.java  CapBACKeypair.java  CapBACProto.java  CapBACResolver.java
java/src/main/java/io/xapix/capbac/impl/: CaveatImpl.java  CertificateImpl.java  HolderImpl.java  InvocationImpl.java  KeypairImpl.java
java/src/main/java/io/xapix/capbac/proto/: CapBACProto.java
ruby/: .gitignore  Cargo.toml  Gemfile  README.md  Rakefile  capbac.gemspec  capbac_cli.gemspec
ruby/cli_lib/: capbac_cli.rb
ruby/exe/: capbac-cli  capbac_cli
ruby/lib/: capbac.rb
ruby/lib/capbac/: cli.rb  exceptions.rb  pubs.rb  trust_checker.rb  version.rb
ruby/spec/: capbac_spec.rb  spec_helper.rb
ruby/src/: lib.rs
rust/: .gitignore  Cargo.toml
rust/cli/: Cargo.toml  README.md
rust/cli/src/: main.rs
rust/lib/: Cargo.toml  LICENSE  README.md  build.rs
rust/lib/src/: lib.rs
rust/lib/src/proto/: capbac.rs  mod.rs
tests/: Cargo.toml
tests/keys/: alice-pub.der  alice-pub.pem  alice.pem  alice.pk8  bob-pub.der  bob-pub.pem  bob.pem  bob.pk8  service-pub.der  service-pub.pem  service.pem  service.pk8
tests/src/: main.rs  support.rs
