[package]
name = "capbac-ruby"
version = "0.1.0"
authors = ["Kirill Chernyshov <delaguardo@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruru = "0.9"
capbac = { path = "../rust/lib" }