[package]
name = "capbac-ruby"
version = "0.1.0"
authors = ["Kirill Chernyshov <delaguardo@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruru = "0.9"
url = "2.1"
openssl = "0.10"
lazy_static = "1"
base64 = "0.12.3"
protobuf = "~2"
capbac = { path = "../rust/lib" }