[package]
name = "capbac-cli"
version = "0.1.0"
authors = ["prepor <ceo@prepor.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "~2"
structopt = "0.3"
ring = "0.16.9"
url = "2.1.0"
openssl = "0.10.26"
regex = "1.3.1"
base64 = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.capbac]
path = "../lib"