[package]
name = "capbac-cli"
version = "0.2.1"
authors = ["prepor <ceo@prepor.ru>", "DeLaGuardo <delaguardo@gmail.com>"]
edition = "2018"

description = "Command line utility for Capability-based Access Control model"
documentation = "https://docs.rs/capbac"
homepage = "http://capbac.org"
repository = "https://github.com/xapix-io/capbac"
readme = "README.md"
keywords = ["security", "capbac"]
license = "MIT"

[dependencies]
protobuf = "2.16.2"
structopt = "0.3"
url = "2.1.0"
openssl = "0.10.26"
regex = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
capbac = "0.2.1"