[package]
name = "capbac"
version = "0.1.0"
authors = ["prepor <ceo@prepor.ru>"]
edition = "2018"

[features]
with-serde = ["serde", "serde_json", "serde_derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "~2"
url = "2.1"
openssl = "0.10"
thiserror = "1.0"
sha2 = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
protoc = "~2"
protoc-rust = "~2"