[package]
name = "capbac"
version = "0.1.0"
authors = ["prepor <ceo@prepor.ru>", "DeLaGuardo <delaguardo@gmail.com>"]
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "~2"
url = "2.1"
openssl = "0.10"
thiserror = "1.0"
sha2 = "0.8"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
protoc = "~2"
protoc-rust = "~2"