[package]
name = "capbac"
version = "0.3.0"
authors = ["prepor <ceo@prepor.ru>", "DeLaGuardo <delaguardo@gmail.com>"]
edition = "2018"

description = "Reference implementation for Capability-based Access Control model"
documentation = "https://docs.rs/capbac"
homepage = "http://capbac.org"
repository = "https://github.com/xapix-io/capbac"
readme = "README.md"
keywords = ["security", "capbac"]
license = "MIT"

[dependencies]
protobuf = "2.16.2"
url = "2.1"
openssl = "0.10.30"
thiserror = "1.0"
sha2 = "0.8"

[lib]
crate-type = ["cdylib", "rlib"]
